syntax = "proto3";

package org.constellation.schema.proto.observation;

import "observation/observation_data.proto";
import "signature/signature_batch.proto";

message SignedObservationData {
  ObservationData data = 1;
  signature.SignatureBatch signatures = 2;
}

message Observation {
  SignedObservationData signedObservationData = 1;
}